2001-04-09 11:50 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * include/hberrors.h
   * source/compiler/hbgenerr.c
     + Added #define HB_COMP_WARN_PARAM_SUSPECT 18 -> "4Suspecious parameter: %s expected: \'%s\'"

   * include/hbcomp.h
     + Added extern PCOMDECLARED  hb_comp_pReleaseDeclared;

   * source/compiler/harbour.c
     + Added static void hb_compDeclaredInit( void ) initializes decalaration of standard functions;

   * source/compiler/genc.c
     * Changed release code from hb_comp_pFirstDeclared to hb_comp_pReleaseDeclared.

   * source/compiler/hbpcode.c
     * Many refinments.

2001-04-08 16:15 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * include/hberrors.h
     ! Corrected typo.

   * source/compiler/harbour.sly
   * source/compiler/harbour.y
     ! Corrected few incorrect "Unreachable code warnings".
     ! Corrected hb_compPushLine() in RECOVER and RECOVERUSING

   * source/compiler/harbour.c
   * source/compiler/hbpcode.c
     ! Improved StrongType logic.

2001-04-07 13:25 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/hbpcode.c
     ! Fixed some StrongType logic.

   * source/compiler/genc.c
   * source/rdd/dbf1.c
   * source/rtl/gtapi.c
   * source/vm/hvm.c
     ! Corrected Compiler warnings.

   * source/compiler/harbour.c
   * include/hbcomp.h
     * Minor formatting.

2001-07-01 21:20 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
    Changes, provided by  Marek Paliwoda.
    *doc/en/gtslang.txt
    *source/rtl/gtsln/gtsln.c
    *source/rtl/gtsln/kbsln.c
    *source/rtl/gtsln/keytrans.c
      ! Fixed a bug with processing '.' key
      * Added support for an Alt emulation using Meta key (which is
        an ESC key as in most Linux applications).

2001-04-04 01:20 UTC-0800 Brian Hays <bhays@abacuslaw.com>
   * source/vm/dynsym.c
      * added test for spaces to hb_dynsymFindName so
        padded symbols are found now.
        A few tests indicated NO speed loss