@@ -1,3 +1,8 @@
+2001-04-09 12:30 UTC-0800 Brian Hays <bhays@abacuslaw.com>
+   * contrib/rdd_ads/ads1.c
+      * added scope optimization to DBOI_KEYCOUNT
+
+
 2001-04-09 11:50 UTC-0800 Ron Pinkas <ron@profit-master.com>
    * include/hberrors.h
    * source/compiler/hbgenerr.c
